[package]
name = "sepax2d"
license = "MIT OR Apache-2.0"
description = "A safe crate for finding and resolving collisions of 2D convex shapes using the Separating Axis Theorem."
version = "0.3.1"
edition = "2021"
repository = "https://github.com/meowitzher/sepax2d/"

[dependencies]

[dev-dependencies]
ggez = "0.7"

[[example]]
name = "dynamic"
path = "examples/dynamic.rs"
crate-type = ["staticlib"]

[[example]]
name = "overlap"
path = "examples/overlap.rs"

[[example]]
name = "collision"
path = "examples/collision.rs"